--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body class="bg-slate-100 min-h-screen flex items-center justify-center p-4">
     <div class="bg-white shadow-2xl rounded-xl p-8 w-full max-w-2xl">
         <div class="flex flex-col items-center mb-8 border-b pb-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Logo_Freddo.png" alt="Freddo Logo" class="h-16 mb-4">
+            <img src="logo.png" alt="Freddo Argentina" class="h-20 mb-4 object-contain">
+            
             <div class="text-center">
                 <h2 class="text-2xl font-bold text-blue-900 uppercase tracking-wider">Comercio Exterior</h2>
                 <p class="text-sm font-semibold text-blue-500">Gestión de Cotizaciones Internacionales</p>
@@ -78,12 +79,13 @@
                 </button>
             </div>
         </form>
-        <p id="msg" class="mt-4 text-center text-green-600 font-bold hidden border border-green-200 bg-green-50 p-2 rounded">¡Cotización guardada exitosamente en el Excel!</p>
+        <p id="msg" class="mt-4 text-center text-green-600 font-bold hidden border border-green-200 bg-green-50 p-2 rounded">¡Cotización guardada exitosamente!</p>
     </div>
 
     <script>
-        // Recuerda colocar aquí la URL que obtienes al "Implementar" en Google Apps Script
-        const scriptURL = 'ACA_VA_TU_URL_DE_APPS_SCRIPT';
+        // PEGA AQUÍ TU URL DE APPS SCRIPT
+        const scriptURL = 'TU_URL_DE_APPS_SCRIPT';
+        
         const form = document.getElementById('comexForm');
         const msg = document.getElementById('msg');
         const btn = document.getElementById('submitBtn');
