--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="mb-6 bg-white p-5 rounded-xl shadow border-l-8 border-blue-900 flex justify-between items-center">
         <div>
             <h1 class="text-2xl font-bold text-blue-900 uppercase tracking-tight">
-                <i class="fa-solid fa-ship mr-2"></i>Freddo <span class="text-blue-500">Logistics</span>
+                <i class="fa-solid fa-ship mr-2"></i>Freddo <span class="text-blue-500"></span>
             </h1>
-            <p class="text-xs text-gray-500 font-bold mt-1 uppercase">Control de Costos y Tiempos de Tránsito</p>
+            <p class="text-xs text-gray-500 font-bold mt-1 uppercase">Cotizaciones de fletes</p>
         </div>
         <div class="text-right">
             <div class="text-xs font-bold bg-gray-200 px-3 py-1 rounded text-gray-600">
-                <i class="fa-solid fa-user-tie mr-1"></i> Perfil: Pasante Comex
+                <i class="fa-solid fa-user-tie mr-1"></i> Perfil: Supply Chain
             </div>
         </div>
     </div>
