--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 
     <div id="view-gestion2026" class="hidden p-6 max-w-screen-2xl mx-auto">
         <div class="flex justify-between items-center mb-6">
-            <div><h2 class="text-2xl font-bold text-gray-800">Panel 2026 (Nube)</h2><p class="text-sm text-gray-500">Gestión de Stock, Trazabilidad y Packing List</p></div>
+            <div><h2 class="text-2xl font-bold text-gray-800">Gestion COMEX</h2><p class="text-sm text-gray-500">Gestion de operaciones
+            </p></div>
             <button onclick="openImportModal()" class="bg-emerald-600 hover:bg-emerald-700 text-white font-bold py-2 px-6 rounded shadow flex items-center transition"><i class="fa-solid fa-cloud-arrow-up mr-2"></i> Importar Excel</button>
         </div>
 
