--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4 h-72">
                     <div class="bg-white p-4 rounded-xl shadow border border-gray-100"><h4 class="text-xs font-bold text-gray-500 uppercase text-center mb-2">Mix por Tipo (USD)</h4><div class="h-56"><canvas id="plChartType"></canvas></div></div>
-                    <div class="bg-white p-4 rounded-xl shadow border border-gray-100"><h4 id="chart-sku-title" class="text-xs font-bold text-gray-500 uppercase text-center mb-2">Top 5 Variantes (USD)</h4><div class="h-56"><canvas id="plChartSku"></canvas></div></div>
+                    <div class="bg-white p-4 rounded-xl shadow border border-gray-100"><h4 id="chart-sku-title" class="text-xs font-bold text-gray-500 uppercase text-center mb-2">Top 5 Sabores (USD)</h4><div class="h-56"><canvas id="plChartSku"></canvas></div></div>
                 </div>
 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4 h-72">
                     <div class="bg-white p-4 rounded-xl shadow border border-gray-100"><h4 class="text-xs font-bold text-gray-500 uppercase text-center mb-2">Mix por Tipo (KG)</h4><div class="h-56"><canvas id="plChartTypeKg"></canvas></div></div>
-                    <div class="bg-white p-4 rounded-xl shadow border border-gray-100"><h4 class="text-xs font-bold text-gray-500 uppercase text-center mb-2">Top 5 Variantes (KG)</h4><div class="h-56"><canvas id="plChartSkuKg"></canvas></div></div>
+                    <div class="bg-white p-4 rounded-xl shadow border border-gray-100"><h4 class="text-xs font-bold text-gray-500 uppercase text-center mb-2">Top 5 Sabores (KG)</h4><div class="h-56"><canvas id="plChartSkuKg"></canvas></div></div>
                 </div>
 
                 <div class="bg-white rounded-xl shadow overflow-hidden border border-gray-200">
