--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <div id="view-gestion2026" class="hidden p-6 max-w-screen-2xl mx-auto">
         <div class="flex justify-between items-center mb-6">
-            <div><h2 class="text-2xl font-bold text-gray-800">Panel 2026 (Nube)</h2><p class="text-sm text-gray-500">Gestión de Stock, Trazabilidad y Packing List</p></div>
+            <div><h2 class="text-2xl font-bold text-gray-800">Panel 2026</h2><p class="text-sm text-gray-500">Gestion de exportaciones</p></div>
             <button onclick="openImportModal()" class="bg-emerald-600 hover:bg-emerald-700 text-white font-bold py-2 px-6 rounded shadow flex items-center transition"><i class="fa-solid fa-cloud-arrow-up mr-2"></i> Importar Excel</button>
         </div>
 
@@ -149,12 +149,12 @@
 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4 h-72">
                     <div class="bg-white p-4 rounded-xl shadow border border-gray-100"><h4 class="text-xs font-bold text-gray-500 uppercase text-center mb-2">Mix por Tipo (USD)</h4><div class="h-56"><canvas id="plChartType"></canvas></div></div>
-                    <div class="bg-white p-4 rounded-xl shadow border border-gray-100"><h4 id="chart-sku-title" class="text-xs font-bold text-gray-500 uppercase text-center mb-2">Top 5 Variantes (USD)</h4><div class="h-56"><canvas id="plChartSku"></canvas></div></div>
+                    <div class="bg-white p-4 rounded-xl shadow border border-gray-100"><h4 id="chart-sku-title" class="text-xs font-bold text-gray-500 uppercase text-center mb-2">Top 5 Sabores (USD)</h4><div class="h-56"><canvas id="plChartSku"></canvas></div></div>
                 </div>
 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4 h-72">
                     <div class="bg-white p-4 rounded-xl shadow border border-gray-100"><h4 class="text-xs font-bold text-gray-500 uppercase text-center mb-2">Mix por Tipo (KG)</h4><div class="h-56"><canvas id="plChartTypeKg"></canvas></div></div>
-                    <div class="bg-white p-4 rounded-xl shadow border border-gray-100"><h4 class="text-xs font-bold text-gray-500 uppercase text-center mb-2">Top 5 Variantes (KG)</h4><div class="h-56"><canvas id="plChartSkuKg"></canvas></div></div>
+                    <div class="bg-white p-4 rounded-xl shadow border border-gray-100"><h4 class="text-xs font-bold text-gray-500 uppercase text-center mb-2">Top 5 Sabores (KG)</h4><div class="h-56"><canvas id="plChartSkuKg"></canvas></div></div>
                 </div>
 
                 <div class="bg-white rounded-xl shadow overflow-hidden border border-gray-200">
